--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <h3>ACQUA DI PARMA</h3>
                             <p>Colonia Futura is Acqua di Parma's declaration of love for nature.
                             A lively and untamed creation that blends the citrus freshness of Colonia with aromatic clary sage...</p>
-                            <a href="blog.html"><button class="button">Read More</button></a>
+                            <a href="colonia_futura.html"><button class="button">Read More</button></a>
                         </div>
                     </div>
                 </section>
@@ -43,7 +43,7 @@
                         <h3>BURBERRY</h3>
                         <p>Burberry Brit for Men features top notes of orange citrus and warm spices over an intriguing floral 
                         heart of wild roses, bright cedar...</p>
-                        <button class="button">Read More</button>
+                        <a href="burberry.html"><button class="button">Read More</button></a>
                     </div>
                 </div>
                 </section>
@@ -55,7 +55,7 @@
                             <h3>BVLGARI</h3>
                             <p>With Bvlgari Man Wood Neroli, Bvlgari continues its tribute to nature and its elements, creating a new link
                                 between urban energy and regenerative nature...</p>
-                        <button class="button">Read More</button>
+                        <a href="bvlgari.html"><button class="button">Read More</button></a>
                         </div>
                         </div>
                     </section>
@@ -67,7 +67,7 @@
                                 <h3>DOLCE & GABBANA</h3>
                                 <p>Light Blue Pour Homme is a classic cologne that draws its masculine power from a clever combination of 
                                 sweet, round mandarin, tart grapefruit, smooth rosewood, Szechuan pepper, incense, and vetiver.</p>
-                                <button class="button">Read More</button>
+                                <a href="dolce.html"><button class="button">Read More</button></a>
                             </div>
                         </div>
                     </section>
@@ -79,7 +79,7 @@
                                 <h3>DEDCOOL</h3>
                                 <p>A universal musk, amplified. Keep your friends close and your scent closer.
                                         Smells like you. Feels like pure comfort.</p>
-                                <a href="blog.html"><button class="button">Read More</button></a>
+                                <a href="dedcool.html"><button class="button">Read More</button></a>
                             </div>
                         </div>
                             </section>
@@ -91,7 +91,7 @@
                                         <h3>SISLEY</h3>
                                         <p>An interplay of citrus and grassy aromas that capture the essence of nature and instill a sense of
                                             well-being and...</p>
-                                    <button class="button">Read More</button>
+                                    <a href="sisley.html"><button class="button">Read More</button></a>
                                     </div>
                                     </div>
                                 </section>
