--- a/burberry.html
+++ b/burberry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,14 +28,12 @@
         <div class="content exam">
             <figure>
             <img class="shadow"src="assets/BURBERRY.jpg" alt="acqua di parma cologne">
-            <figcaption>Colonia Futura by Acqua di Parma.</figcaption>
+            <figcaption>Brit for men by Burberry</figcaption>
             </figure>
             <div>
-            <h1>Colonia Futura</h1>
-            <h2>ACQUA DI PARMA</h2>
-             <blockquote><p><b>Futura</b> is <u><em>Acqua di Parma's</em></u> declaration of love for nature.
-            A lively and untamed creation that blends the citrus freshness of Colonia with aromatic clary sage.
-            A harmony that concludes with vetiver to bring forward its woody touch through earthy and textured accents.</p></blockquote>
+            <h1>BURBERRY</h1>
+            <h2>Brit for Men</h2>
+             <blockquote><p>Top notes of bergamot, mandarin, ginger, and cardamom fuse into a crisp display of orange citrus and warm spices. An intriguing floral heart trades wild roses for the citrus, and offers bright cedar and nutmeg. Oriental woods, bright grey musk and tonka bean’s sweet smoke balance the base.</p></blockquote>
              <a href="index.html"><button class="button">Back</button></a>
             </div>
         </div>
