--- a/bvlgari.html
+++ b/bvlgari.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bvlgari</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/bvlgari.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
 
     <main>
         <div class="hero-section">
-            <img src="assets/BVLGARI.jpg" alt="Bvlgari Man Wood Neroli Bottle" class="product-image">
+            <img src="assets/bvlgari.png" alt="Bvlgari Man Wood Neroli Bottle" class="product-image">
             <h1 class="brand-title">BVLGARI</h1>
             <p class="product-name">Man Wood Neroli</p>
             <p class="product-brand">Bvlgari</p>
