Added body copy to bvlgari.html
added an arrow to notify user to scroll down but didn't like how it looked so its commented out for now.

Hopefully I can update the pages for the other colognes by tonight 🙏🏽🙏🏽

--- a/bvlgari.html
+++ b/bvlgari.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -28,5 +28,18 @@
             <p class="product-brand">Bvlgari</p>
         </div>
     </main>
+
+    <section>
+        <p>
+            With Bvlgari Man Wood Neroli, Bvlgari continues its tribute to nature and its elements, creating a new link between urban energy and regenerative nature. Inspired by the power of the Mediterranean sun, the fragrance celebrates the power of light with notes of neroli, bergamot, orange blossom, cedarwood and musks.
+        </p>
+    </section>
+
+    <section>
+        <H2>My Thoughts</H2>
+        <p>
+            My thoughts on the scent coming soon!
+        </p>
+    </section>
 </body>
 </html>
