--- a/bvlgari.html
+++ b/bvlgari.html
@@ -30,16 +30,17 @@
     </main>
 
     <section>
-        <p>
+        <div class="info-section">
+         <p>
             With Bvlgari Man Wood Neroli, Bvlgari continues its tribute to nature and its elements, creating a new link between urban energy and regenerative nature. Inspired by the power of the Mediterranean sun, the fragrance celebrates the power of light with notes of neroli, bergamot, orange blossom, cedarwood and musks.
         </p>
-    </section>
+        <button>Purchase Here</button>
+        </div>
 
-    <section>
-        <H2>My Thoughts</H2>
-        <p>
-            My thoughts on the scent coming soon!
-        </p>
+        <div>
+
+        
+        </div>
     </section>
 </body>
 </html>
