--- a/bvlgari.html
+++ b/bvlgari.html
@@ -34,13 +34,27 @@
          <p>
             With Bvlgari Man Wood Neroli, Bvlgari continues its tribute to nature and its elements, creating a new link between urban energy and regenerative nature. Inspired by the power of the Mediterranean sun, the fragrance celebrates the power of light with notes of neroli, bergamot, orange blossom, cedarwood and musks.
         </p>
-        <button>Purchase Here</button>
         </div>
 
-        <div>
-
-        
+        <div class="review-section">
+            <h2>Review</h2>
+            <br>
+            <p>Wearing Bvlgari Man Wood Neroli was a refreshing experience. The bright citrus burst of neroli, bergamot, and orange blossom felt fresh and natural, with a subtle warmth from the cedarwood and musks. I really enjoyed its light, airy feel, which captures that Mediterranean inspiration well.</p>
+<br>
+            <p>However, while it’s pleasant, it didn’t strike me as particularly unique. The citrus notes faded quicker than I’d hoped, leaving a musky, woody base that felt a bit flat over time. It’s a safe, versatile choice for everyday wear, but it doesn’t quite deliver the dynamic energy I expected.
+            </p>
+            <img src="assets/Review stars 3.png" alt="3 out of 5 colognes">
         </div>
+     <a href="#https://www.scentbird.com/perfume/bvlgari-man-wood-neroli-2008"><button>Buy</button></a>
+<div class="additional-scents">
+<h2>Additional Scents</h2>
+<div class="scent-block">
+<img src="assets/Acqua Di Parma.png" alt="ACQUA_DI_PARMA" height="181px" class="cologne">
+<img src="assets/burberry.png" alt="burberry" height="181px" class="cologne">
+<img src="assets/Dedcool.png" alt="Dedcool" height="181px" class="cologne">
+<img src="assets/Dolce&Gabbana.png" alt="Dolce&Gabbana" height="181px" class="cologne">
+</div>
+</div>
     </section>
 </body>
 </html>
